tests/cases/must_use.stderr
error: unused return value of `static_vector::Vec::<T, CAPACITY>::is_empty` that must be used
 --> tests/cases/must_use.rs:7:5
  |
7 |     vec.is_empty();
  |     ^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/cases/must_use.rs:1:9
  |
1 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
help: use `let _ = ...` to ignore the resulting value
  |
7 |     let _ = vec.is_empty();
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::is_full` that must be used
 --> tests/cases/must_use.rs:8:5
  |
8 |     vec.is_full();
  |     ^^^^^^^^^^^^^
  |
help: use `let _ = ...` to ignore the resulting value
  |
8 |     let _ = vec.is_full();
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::capacity` that must be used
 --> tests/cases/must_use.rs:9:5
  |
9 |     vec.capacity();
  |     ^^^^^^^^^^^^^^
  |
help: use `let _ = ...` to ignore the resulting value
  |
9 |     let _ = vec.capacity();
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::len` that must be used
  --> tests/cases/must_use.rs:10:5
   |
10 |     vec.len();
   |     ^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
10 |     let _ = vec.len();
   |     +++++++

error: unused `Result` that must be used
  --> tests/cases/must_use.rs:11:5
   |
11 |     vec.push(&1);
   |     ^^^^^^^^^^^^
   |
   = note: this `Result` may be an `Err` variant, which should be handled
help: use `let _ = ...` to ignore the resulting value
   |
11 |     let _ = vec.push(&1);
   |     +++++++

error: unused `Result` that must be used
  --> tests/cases/must_use.rs:12:5
   |
12 |     vec.set_len(1);
   |     ^^^^^^^^^^^^^^
   |
   = note: this `Result` may be an `Err` variant, which should be handled
help: use `let _ = ...` to ignore the resulting value
   |
12 |     let _ = vec.set_len(1);
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::first` that must be used
  --> tests/cases/must_use.rs:13:5
   |
13 |     vec.first();
   |     ^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
13 |     let _ = vec.first();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::first_mut` that must be used
  --> tests/cases/must_use.rs:14:5
   |
14 |     vec.first_mut();
   |     ^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
14 |     let _ = vec.first_mut();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::last` that must be used
  --> tests/cases/must_use.rs:15:5
   |
15 |     vec.last();
   |     ^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
15 |     let _ = vec.last();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::last_mut` that must be used
  --> tests/cases/must_use.rs:16:5
   |
16 |     vec.last_mut();
   |     ^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
16 |     let _ = vec.last_mut();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::get` that must be used
  --> tests/cases/must_use.rs:17:5
   |
17 |     vec.get(0);
   |     ^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
17 |     let _ = vec.get(0);
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::get_mut` that must be used
  --> tests/cases/must_use.rs:18:5
   |
18 |     vec.get_mut(0);
   |     ^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
18 |     let _ = vec.get_mut(0);
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::pop` that must be used
  --> tests/cases/must_use.rs:19:5
   |
19 |     vec.pop();
   |     ^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
19 |     let _ = vec.pop();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::pop_if` that must be used
  --> tests/cases/must_use.rs:20:5
   |
20 |     vec.pop_if(|&_i32| true);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
20 |     let _ = vec.pop_if(|&_i32| true);
   |     +++++++

error: unused `static_vector::Iter` that must be used
  --> tests/cases/must_use.rs:21:5
   |
21 |     vec.iter();
   |     ^^^^^^^^^^
   |
   = note: must consume iterator
help: use `let _ = ...` to ignore the resulting value
   |
21 |     let _ = vec.iter();
   |     +++++++

error: unused `static_vector::IterMut` that must be used
  --> tests/cases/must_use.rs:22:5
   |
22 |     vec.iter_mut();
   |     ^^^^^^^^^^^^^^
   |
   = note: must consume iterator
help: use `let _ = ...` to ignore the resulting value
   |
22 |     let _ = vec.iter_mut();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::as_slice` that must be used
  --> tests/cases/must_use.rs:23:5
   |
23 |     vec.as_slice();
   |     ^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
23 |     let _ = vec.as_slice();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::as_mut_slice` that must be used
  --> tests/cases/must_use.rs:24:5
   |
24 |     vec.as_mut_slice();
   |     ^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
24 |     let _ = vec.as_mut_slice();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::new` that must be used
  --> tests/cases/must_use.rs:26:5
   |
26 |     Vec::<i32, 1>::new();
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
26 |     let _ = Vec::<i32, 1>::new();
   |     +++++++
